Sync all content

--- a/content/resources/21l-703s14-th.md
+++ b/content/resources/21l-703s14-th.md
@@ -3,7 +3,7 @@ content_type: resource
 description: Photograph of the playwright Sir Tom Stoppard, at the rehearsal for The
   Laws from War, a play specially written for Human Rights Watch. Courtesy of Human
   Rights Watch London on Flickr. CC license BY-NC.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/21l-703-studies-in-drama-stoppard-and-company-spring-2014/550830a8c68be45abf658cf15d6cefa1_21l-703s14-th.jpg
+file: /media/courses/21l-703-studies-in-drama-stoppard-and-company-spring-2014/550830a8c68be45abf658cf15d6cefa1_21l-703s14-th.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Photograph of the playwright Sir Tom Stoppard at the rehearsal for _The
@@ -13,6 +13,8 @@ image_metadata:
   credit: Courtesy of Human Rights Watch London on Flickr. CC license BY-NC.
   image-alt: Photograph of the playwright Sir Tom Stoppard at a rehearsal for a new
     play.
+learning_resource_types: []
+ocw_type: OCWImage
 resourcetype: Image
 title: 21l-703s14-th.jpg
 uid: 550830a8-c68b-e45a-bf65-8cf15d6cefa1
