--- a/content/resources/21l-703s14-th.md
+++ b/content/resources/21l-703s14-th.md
@@ -3,7 +3,7 @@ content_type: resource
 description: Photograph of the playwright Sir Tom Stoppard, at the rehearsal for The
   Laws from War, a play specially written for Human Rights Watch. Courtesy of Human
   Rights Watch London on Flickr. CC license BY-NC.
-file: /media/courses/21l-703-studies-in-drama-stoppard-and-company-spring-2014/550830a8c68be45abf658cf15d6cefa1_21l-703s14-th.jpg
+file: /courses/21l-703-studies-in-drama-stoppard-and-company-spring-2014/550830a8c68be45abf658cf15d6cefa1_21l-703s14-th.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Photograph of the playwright Sir Tom Stoppard at the rehearsal for _The
@@ -19,3 +19,5 @@ resourcetype: Image
 title: 21l-703s14-th.jpg
 uid: 550830a8-c68b-e45a-bf65-8cf15d6cefa1
 ---
+Photograph of the playwright Sir Tom Stoppard, at the rehearsal for The Laws from War, a play specially written for Human Rights Watch. Courtesy of Human Rights Watch London on Flickr. CC license BY-NC.
+
