--- a/content/resources/21l-703s14.md
+++ b/content/resources/21l-703s14.md
@@ -3,7 +3,7 @@ content_type: resource
 description: Photograph of the playwright Sir Tom Stoppard, at the rehearsal for The
   Laws from War, a play specially written for Human Rights Watch. Courtesy of Human
   Rights Watch London on Flickr. CC license BY-NC.
-file: /media/courses/21l-703-studies-in-drama-stoppard-and-company-spring-2014/e88da801484024ca773c1e47936b8356_21l-703s14.jpg
+file: /courses/21l-703-studies-in-drama-stoppard-and-company-spring-2014/e88da801484024ca773c1e47936b8356_21l-703s14.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Photograph of the playwright Sir Tom Stoppard at the rehearsal for _The
@@ -19,3 +19,5 @@ resourcetype: Image
 title: 21l-703s14.jpg
 uid: e88da801-4840-24ca-773c-1e47936b8356
 ---
+Photograph of the playwright Sir Tom Stoppard, at the rehearsal for The Laws from War, a play specially written for Human Rights Watch. Courtesy of Human Rights Watch London on Flickr. CC license BY-NC.
+
