Sync all content

--- a/content/resources/21l-703s14-th.md
+++ b/content/resources/21l-703s14-th.md
@@ -14,10 +14,10 @@ image_metadata:
   image-alt: Photograph of the playwright Sir Tom Stoppard at a rehearsal for a new
     play.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 21l-703s14-th.jpg
 uid: 550830a8-c68b-e45a-bf65-8cf15d6cefa1
 ---
 Photograph of the playwright Sir Tom Stoppard, at the rehearsal for The Laws from War, a play specially written for Human Rights Watch. Courtesy of Human Rights Watch London on Flickr. CC license BY-NC.
-
