--- a/content/resources/21l-703s14-th.md
+++ b/content/resources/21l-703s14-th.md
@@ -4,6 +4,7 @@ description: Photograph of the playwright Sir Tom Stoppard, at the rehearsal for
   Laws from War, a play specially written for Human Rights Watch. Courtesy of Human
   Rights Watch London on Flickr. CC license BY-NC.
 file: /courses/21l-703-studies-in-drama-stoppard-and-company-spring-2014/550830a8c68be45abf658cf15d6cefa1_21l-703s14-th.jpg
+file_size: 8533
 file_type: image/jpeg
 image_metadata:
   caption: Photograph of the playwright Sir Tom Stoppard at the rehearsal for _The
