--- a/content/resources/21l-703s14.md
+++ b/content/resources/21l-703s14.md
@@ -4,6 +4,7 @@ description: Photograph of the playwright Sir Tom Stoppard, at the rehearsal for
   Laws from War, a play specially written for Human Rights Watch. Courtesy of Human
   Rights Watch London on Flickr. CC license BY-NC.
 file: /courses/21l-703-studies-in-drama-stoppard-and-company-spring-2014/e88da801484024ca773c1e47936b8356_21l-703s14.jpg
+file_size: 69811
 file_type: image/jpeg
 image_metadata:
   caption: Photograph of the playwright Sir Tom Stoppard at the rehearsal for _The
