--- a/content/resources/21l-703s14.md
+++ b/content/resources/21l-703s14.md
@@ -9,8 +9,8 @@ file_type: image/jpeg
 image_metadata:
   caption: Photograph of the playwright Sir Tom Stoppard at the rehearsal for _The
     Laws from War_, a play specially written for Human Rights Watch. (Courtesy of
-    {{% resource_link "63820e0c-df55-4b0b-881e-2a347268ee01" "Human Rights Watch London"
-    %}} on Flickr. CC license BY-NC.)
+    [Human Rights Watch London](https://www.flickr.com/photos/hrwlondon/4659980814/in/photostream/)
+    on Flickr. CC license BY-NC.)
   credit: Courtesy of Human Rights Watch London on Flickr. CC license BY-NC.
   image-alt: Photograph of the playwright Sir Tom Stoppard at a rehearsal for a new
     play.
